src/rules/snapshots/pg_migration_lint__rules__pgm018__tests__check_without_not_valid_on_existing_table_fires.snap
---
source: src/rules/pgm018.rs
assertion_line: 110
expression: findings
---
- rule_id: PGM018
  severity: Critical
  message: "Adding CHECK constraint on existing table 'orders' without NOT VALID will scan the entire table while holding an ACCESS EXCLUSIVE lock. Use ADD CONSTRAINT ... NOT VALID, then VALIDATE CONSTRAINT in a separate statement."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
