src/rules/snapshots/pg_migration_lint__rules__pgm018__tests__cluster_without_index_fires.snap
---
source: src/rules/pgm018.rs
expression: findings
---
- rule_id: PGM018
  severity: Critical
  message: "CLUSTER on table 'customers' rewrites the entire table under ACCESS EXCLUSIVE lock for the full duration. All reads and writes are blocked. This is rarely appropriate in an online migration."
  file: migrations/010.sql
  start_line: 1
  end_line: 1
